--- a/demo/index.html
+++ b/demo/index.html
@@ -9,7 +9,20 @@
 	<p>gyro.getFeatures: <span id="features"></span></p>
 	<span id="example"></span>
 	<script src="../js/gyro.js"></script>
+	<script src="//cdn.jsdelivr.net/sockjs/1.0.3/sockjs.min.js"></script>
 	<script>
+
+		var sock = new SockJS('http://eggtray.mybluemix.net/gyroscope');
+		sock.onopen = function() {
+			console.log('open');
+		};
+		sock.onmessage = function(e) {
+			console.log('message', e.data);
+		};
+		sock.onclose = function() {
+			console.log('close');
+		};
+
 		gyro.startTracking(function(o) {
 			var b = document.getElementById('example'),
 					f = document.getElementById('features');
@@ -20,6 +33,8 @@
 										"<p> alpha = " + o.alpha + "</p>" +
 										"<p> beta = " + o.beta + "</p>" +
 										"<p> gamma = " + o.gamma + "</p>";
+
+			sock.send(alpha);
 		});
 	</script>
 </body>
